# w1

./: .augment-guidelines  .dockerignore  .gitignore  .npmrc  CLOUDFLARE_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  README.md  assets.config.json  capacitor.config.ts  deploy-trigger.txt  deploy.ps1  docker-compose.yml  eslint.config.js  index.html  manifest.webmanifest  nginx.conf  optimization_summary.md  package-lock.json  package.json  pnpm-lock.yaml  quick-deploy.ps1  registerSW.js  sw.js  tailwind.config.js  test_settings_scroll_position.html  tsconfig.app.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  workbox-91fdae65.js  workbox-d325ba02.js  wrangler.toml
.cargo/: config.toml
android/: capacitor.settings.gradle  gradle.properties
assets/: AIDebateSettings-55k7EVTC.js  AIDebateSettings-Cb3SVifi.js  AIDebateSettings-Dmiocnj3.js  AboutPage-BCTmT568.js  AboutPage-BlVub2C8.js  AboutPage-CrmBnOA-.js  AddProviderPage-B_AfP9Cv.js  AddProviderPage-C_9c7KP7.js  AddProviderPage-Duj0i2OC.js  AdvancedBackupPage-B9GwQN7v.js  AdvancedBackupPage-CsQbp3n6.js  AdvancedBackupPage-dehcO3Dr.js  AppearanceSettings-CA9xqVt1.js  AppearanceSettings-Cy1pWsAB.js  AppearanceSettings-DTJ8yCw7.js  AssistantModelSettings-Be94Iq3t.js  AssistantModelSettings-CVkyQ7sk.js  AssistantModelSettings-Cucqx3Xp.js  AssistantSettings-BNDBLIjk.js  AssistantSettings-DYB0inGo.js  AssistantSettings-n92B4los.js  AvatarUploader-BsyVzYtY.js  AvatarUploader-CJ8p63fU.js  AvatarUploader-D5lh_rEa.js  AzureTTSSettings-C9nnZ-qh.js  (+451 more)
src-tauri/: Cargo.toml  tauri.conf.json
(+617 files in other folders)
