[package]
name = "aetherlink"
version = "0.5.0"
description = "AetherLink - AI-powered chat assistant with advanced features"
authors = ["AetherLink Team"]
license = "MIT"
repository = "https://github.com/your-username/AetherLink-app3"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["devtools"] }

tauri-plugin-log = "2.0.0-rc"
tauri-plugin-http = "2.0.0-rc"

# 开发时的可选功能
[features]
default = []
devtools = ["tauri/devtools"]

# 构建速度优化配置
[profile.dev]
# 关闭调试信息以加速构建
debug = 0
# 增加代码生成单元数量以提高并行度
codegen-units = 256

[profile.dev.build-override]
# 为构建脚本和过程宏启用优化
opt-level = 3

# 发布版本优化配置
[profile.release]
# 优化大小而不是速度
opt-level = "s"
# 启用链接时优化
lto = true
# 减少代码生成单元以优化大小
codegen-units = 1
# 启用 panic = abort 以减少大小
panic = "abort"
# 去除调试信息
debug = false
